# Qrbot

./: .env  README.md  bot.py  pyproject.toml  requirements.txt  users.json
